Add support for the unshare container
Allows configuration of container parameters

Signed-off-by: lateautumn233 <3487467850@qq.com>

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -256,6 +256,10 @@
         <item>run-parts</item>
         <item>sysv</item>
     </string-array>
+    <string-array name="method_values" translatable="false">
+        <item>chroot</item>
+        <item>unshare</item>
+    </string-array>
     <string-array name="graphics_values" translatable="false">
         <item>vnc</item>
         <item>x11</item>
