--- a/app/src/main/res/xml/properties.xml
+++ b/app/src/main/res/xml/properties.xml
@@ -3,6 +3,22 @@
 
     <PreferenceCategory android:title="@string/bootstrap_preferences">
         <ListPreference
+            android:defaultValue="@string/method"
+            android:dialogTitle="@string/dialog_title_method_preference"
+            android:entries="@array/method_values"
+            android:entryValues="@array/method_values"
+            android:key="method"
+            android:summary="@string/method"
+            android:title="@string/title_method_preference" />
+
+        <EditTextPreference
+            android:defaultValue="@string/method_options"
+            android:dialogTitle="@string/dialog_title_method_options_preference"
+            android:key="method_options"
+            android:summary="@string/method_options"
+            android:title="@string/title_method_options_preference" />
+
+        <ListPreference
             android:defaultValue="@string/distrib"
             android:dialogTitle="@string/dialog_title_distrib_preference"
             android:entries="@array/distrib_entries"
